@@ -16,8 +16,9 @@ $path = nv_check_path_upload($nv_Request->get_string('path', 'post,get', NV_UPLO
 $check_allow_upload_dir = nv_check_allow_upload_dir($path);
 $newfilename = change_alias($nv_Request->get_title('newfilename', 'post', ''));
 $responseType = $nv_Request->get_title('responseType', 'get', '');
+$autologo = $nv_Request->get_int('autologo', 'post', 0);
 
-$chunk_upload = array();
+$chunk_upload = [];
 $chunk_upload['name'] = $nv_Request->get_title('name', 'post', '');
 $chunk_upload['chunk'] = $nv_Request->get_int('chunk', 'post', 0);
 $chunk_upload['chunks'] = $nv_Request->get_int('chunks', 'post', 0);
@@ -25,7 +26,7 @@ $chunk_upload['tmpdir'] = NV_ROOTDIR . '/' . NV_TEMP_DIR;
 $chunk_upload['chunk_prefix'] = NV_TEMPNAM_PREFIX . 'chunk' . md5($global_config['sitekey'] . NV_CLIENT_IP) . '_';
 
 $error = '';
-$upload_info = array();
+$upload_info = [];
 
 if (!isset($check_allow_upload_dir['upload_file'])) {
     $error = $lang_module['notlevel'];
@@ -39,17 +40,17 @@ if (!isset($check_allow_upload_dir['upload_file'])) {
     $type = $nv_Request->get_string('type', 'post,get');
 
     if ($type == 'image' and in_array('images', $admin_info['allow_files_type'])) {
-        $allow_files_type = array(
+        $allow_files_type = [
             'images'
-        );
+        ];
     } elseif ($type == 'flash' and in_array('flash', $admin_info['allow_files_type'])) {
-        $allow_files_type = array(
+        $allow_files_type = [
             'flash'
-        );
+        ];
     } elseif (empty($type)) {
         $allow_files_type = $admin_info['allow_files_type'];
     } else {
-        $allow_files_type = array();
+        $allow_files_type = [];
     }
 
     $upload = new NukeViet\Files\Upload($allow_files_type, $global_config['forbid_extensions'], $global_config['forbid_mimes'], NV_UPLOAD_MAX_FILESIZE, NV_MAX_WIDTH, NV_MAX_HEIGHT);
@@ -112,52 +113,50 @@ if (!isset($check_allow_upload_dir['upload_file'])) {
                 $dir = rtrim($dir, '/');
                 $arr_dir = explode('/', $dir);
 
-                if ($global_config['autologomod'] == 'all' or ($arr_dir[0] == NV_UPLOADS_DIR and isset($arr_dir[1]) and in_array($arr_dir[1], $autologomod))) {
-                    if (!empty($global_config['upload_logo']) and file_exists(NV_ROOTDIR . '/' . $global_config['upload_logo'])) {
-                        $logo_size = getimagesize(NV_ROOTDIR . '/' . $global_config['upload_logo']);
-                        $file_size = $upload_info['img_info'];
+                if ($autologo and !empty($global_config['upload_logo']) and file_exists(NV_ROOTDIR . '/' . $global_config['upload_logo'])) {
+                    $logo_size = getimagesize(NV_ROOTDIR . '/' . $global_config['upload_logo']);
+                    $file_size = $upload_info['img_info'];
 
-                        if ($file_size[0] <= 150) {
-                            $w = ceil($logo_size[0] * $global_config['autologosize1'] / 100);
-                        } elseif ($file_size[0] < 350) {
-                            $w = ceil($logo_size[0] * $global_config['autologosize2'] / 100);
+                    if ($file_size[0] <= 150) {
+                        $w = ceil($logo_size[0] * $global_config['autologosize1'] / 100);
+                    } elseif ($file_size[0] < 350) {
+                        $w = ceil($logo_size[0] * $global_config['autologosize2'] / 100);
+                    } else {
+                        if (ceil($file_size[0] * $global_config['autologosize3'] / 100) > $logo_size[0]) {
+                            $w = $logo_size[0];
                         } else {
-                            if (ceil($file_size[0] * $global_config['autologosize3'] / 100) > $logo_size[0]) {
-                                $w = $logo_size[0];
-                            } else {
-                                $w = ceil($file_size[0] * $global_config['autologosize3'] / 100);
-                            }
+                            $w = ceil($file_size[0] * $global_config['autologosize3'] / 100);
                         }
-
-                        $h = ceil($w * $logo_size[1] / $logo_size[0]);
-                        $x = $file_size[0] - $w - 5;
-                        $y = $file_size[1] - $h - 5;
-
-                        $config_logo = array();
-                        $config_logo['w'] = $w;
-                        $config_logo['h'] = $h;
-
-                        $config_logo['x'] = $file_size[0] - $w - 5; // Horizontal: Right
-                        $config_logo['y'] = $file_size[1] - $h - 5; // Vertical: Bottom
-
-                        // Logo vertical
-                        if (preg_match("/^top/", $global_config['upload_logo_pos'])) {
-                            $config_logo['y'] = 5;
-                        } elseif (preg_match("/^center/", $global_config['upload_logo_pos'])) {
-                            $config_logo['y'] = round(($file_size[1] / 2) - ($h / 2));
-                        }
-
-                        // Logo horizontal
-                        if (preg_match("/Left$/", $global_config['upload_logo_pos'])) {
-                            $config_logo['x'] = 5;
-                        } elseif (preg_match("/Center$/", $global_config['upload_logo_pos'])) {
-                            $config_logo['x'] = round(($file_size[0] / 2) - ($w / 2));
-                        }
-
-                        $createImage = new NukeViet\Files\Image(NV_ROOTDIR . '/' . $path . '/' . $upload_info['basename'], NV_MAX_WIDTH, NV_MAX_HEIGHT);
-                        $createImage->addlogo(NV_ROOTDIR . '/' . $global_config['upload_logo'], '', '', $config_logo);
-                        $createImage->save(NV_ROOTDIR . '/' . $path, $upload_info['basename'], $thumb_config['thumb_quality']);
                     }
+
+                    $h = ceil($w * $logo_size[1] / $logo_size[0]);
+                    $x = $file_size[0] - $w - 5;
+                    $y = $file_size[1] - $h - 5;
+
+                    $config_logo = [];
+                    $config_logo['w'] = $w;
+                    $config_logo['h'] = $h;
+
+                    $config_logo['x'] = $file_size[0] - $w - 5; // Horizontal: Right
+                    $config_logo['y'] = $file_size[1] - $h - 5; // Vertical: Bottom
+
+                    // Logo vertical
+                    if (preg_match("/^top/", $global_config['upload_logo_pos'])) {
+                        $config_logo['y'] = 5;
+                    } elseif (preg_match("/^center/", $global_config['upload_logo_pos'])) {
+                        $config_logo['y'] = round(($file_size[1] / 2) - ($h / 2));
+                    }
+
+                    // Logo horizontal
+                    if (preg_match("/Left$/", $global_config['upload_logo_pos'])) {
+                        $config_logo['x'] = 5;
+                    } elseif (preg_match("/Center$/", $global_config['upload_logo_pos'])) {
+                        $config_logo['x'] = round(($file_size[0] / 2) - ($w / 2));
+                    }
+
+                    $createImage = new NukeViet\Files\Image(NV_ROOTDIR . '/' . $path . '/' . $upload_info['basename'], NV_MAX_WIDTH, NV_MAX_HEIGHT);
+                    $createImage->addlogo(NV_ROOTDIR . '/' . $global_config['upload_logo'], '', '', $config_logo);
+                    $createImage->save(NV_ROOTDIR . '/' . $path, $upload_info['basename'], $thumb_config['thumb_quality']);
                 }
                 //remame with option new filename
                 if (!empty($newfilename)) {
@@ -187,11 +186,11 @@ if (!preg_match("/^([a-zA-Z0-9\-\_]+)$/", $editor)) {
 if (!empty($error)) {
     // Lỗi upload
     if ($responseType == 'json') {
-        $array_data = array();
+        $array_data = [];
         $array_data['uploaded'] = 0;
-        $array_data['error'] = array(
+        $array_data['error'] = [
             'message' => $error
-        );
+        ];
 
         nv_jsonOutput($array_data);
     } elseif ($editor == 'ckeditor') {
@@ -230,7 +229,7 @@ if (!empty($error)) {
 
     if ($editor == 'ckeditor') {
         if ($responseType == 'json') {
-            $array_data = array();
+            $array_data = [];
             $array_data['uploaded'] = 1;
             $array_data['fileName'] = $upload_info['basename'];
             $array_data['url'] = NV_BASE_SITEURL . $path . '/' . $upload_info['basename'];
